--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -150,3 +150,14 @@ tail_includes:
   </div><!-- .post-tail-bottom -->
 
 </div><!-- div.post-tail-wrapper -->
+
+<!-- utterance 댓글 스니펫 삽입-->
+
+<script src="https://utteranc.es/client.js"
+        repo="tigerkey/tigerkey.github.io"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
+
