--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -156,7 +156,7 @@ tail_includes:
 <script src="https://utteranc.es/client.js"
         repo="tigerkey/tigerkey.github.io"
         issue-term="pathname"
-        theme="github-light"
+        theme="github-dark"
         crossorigin="anonymous"
         async>
 </script>
